refactor and fix typos